--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>SSHy</title>
-  <base href="/">
+  <!--base href="/"-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="assets/sshy/defines.js"></script>
 
