--- a/SSHy/src/index.html
+++ b/SSHy/src/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>SSHy</title>
-  <!--base href="/"-->
+  <title>Play</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="assets/sshy/defines.js"></script>
 
