--- a/SSHy/src/index.html
+++ b/SSHy/src/index.html
@@ -6,29 +6,7 @@
   <title>Play</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="assets/sshy/defines.js"></script>
-
-  <script type="text/javascript" src="assets/sshy/src/aes.min.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/BigInteger.min.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/randomart.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/struct.min.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/utilities.min.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/xterm.min.js"></script>
-
-  <script type="text/javascript" src="assets/sshy/terminal_settings.js"></script>
-  <script type="text/javascript" src="assets/sshy/SSHyClient.js"></script>
-  <script type="text/javascript" src="assets/sshy/message.js"></script>
-  <script type="text/javascript" src="assets/sshy/parceler.js"></script>
-  <script type="text/javascript" src="assets/sshy/crypto.js"></script>
-  <script type="text/javascript" src="assets/sshy/auth_handler.js"></script>
-  <script type="text/javascript" src="assets/sshy/rsaKey.js"></script>
-  <script type="text/javascript" src="assets/sshy/src/Hash.min.js"></script>
-  <script type="text/javascript" src="assets/sshy/transport.js"></script>
-  <script type="text/javascript" src="assets/sshy/dhKex.js"></script>
-  <script type="text/javascript" src="assets/sshy/settings.js"></script>
-
-  <script type="text/javascript" src="assets/sshy/terminal_window.js"></script>
-
+  <script src="./sshy/xterm.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
