--- a/SSHy/src/index.html
+++ b/SSHy/src/index.html
@@ -6,7 +6,7 @@
   <title>Play</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="./sshy/combinedJS.comb.js"></script>
+  <script src="./ssh/combinedJS.comb.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
